# Raytracer

./: .gitmodules  CMakeLists.txt
glsl/: cube.frag  cube.vert  quad.frag  quad.vert
src/: App.cpp  App.hpp
src/app/: App.cpp  App.hpp  main.cpp
src/bsdf/: BxDF.cpp  Microfacet.cpp  Microfacet.hpp  Samples.hpp
src/cpu/: BDPT.cpp  BDPT.hpp  Integrator.cpp  Integrator.hpp  PathTracer.cpp  PathTracer.hpp  PathTracer16.cpp  PathTracer16.hpp
src/cpu/bsdf/: BSDF.cpp  BSDF.hpp  BxDF.cpp  BxDF.hpp  Diffuse.hpp
src/lights/: EnvLight.cpp  EnvLight.hpp  PointLight.cpp
src/samplers/: Distributions.cpp  Distributions.hpp
src/scene/: BBox.cpp  BBox.hpp  BVH.cpp  BVH.hpp  Common.hpp  Format.hpp  ImagesCache.cpp  ImagesCache.hpp  Material.cpp  Material.hpp  MeshCPU.cpp  MeshCPU.hpp  Model.cpp  Model.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp
src/scene/bsdf/: BxDF.hpp  Diffuse.cpp  Diffuse.hpp  Samples.hpp
src/scene/lights/: EnvLight.cpp  EnvLight.hpp  LightSource.hpp  PointLight.hpp
src/scene/samplers/: Distributions.cpp
